RESOLVED FIXED181077
DeferredLoadingScope incorrectly disabled images or enables deferred loading
https://bugs.webkit.org/show_bug.cgi?id=181077
Summary DeferredLoadingScope incorrectly disabled images or enables deferred loading
Ryosuke Niwa
Reported 2017-12-20 21:22:47 PST
DeferredLoadingScope incorrectly disabled images or enables deferred loading
Attachments
Fixes the bug (6.83 KB, patch)
2017-12-20 21:24 PST, Ryosuke Niwa
wenson_hsieh: review+
Ryosuke Niwa
Comment 1 2017-12-20 21:24:30 PST
Created attachment 330005 [details] Fixes the bug
Wenson Hsieh
Comment 2 2017-12-20 22:06:24 PST
Comment on attachment 330005 [details] Fixes the bug View in context: https://bugs.webkit.org/attachment.cgi?id=330005&action=review > LayoutTests/editing/pasteboard/pasting-with-images-disabled-should-not-enable-deferred-loading.html:14 > + imageLoaded = false; Let's remove this before landing (...unless it's a special global flag used by one of the test harness scripts?) > LayoutTests/editing/pasteboard/pasting-with-images-disabled-should-not-enable-deferred-loading.html:16 > + setTimeout(() => finishJSTest(), 1000); Let's remove this too.
Ryosuke Niwa
Comment 3 2017-12-20 22:09:39 PST
(In reply to Wenson Hsieh from comment #2) > Comment on attachment 330005 [details] > Fixes the bug > > View in context: > https://bugs.webkit.org/attachment.cgi?id=330005&action=review > > > LayoutTests/editing/pasteboard/pasting-with-images-disabled-should-not-enable-deferred-loading.html:14 > > + imageLoaded = false; > > Let's remove this before landing (...unless it's a special global flag used > by one of the test harness scripts?) Oops, yeah, this was a debugging code. Removed. > > LayoutTests/editing/pasteboard/pasting-with-images-disabled-should-not-enable-deferred-loading.html:16 > > + setTimeout(() => finishJSTest(), 1000); > > Let's remove this too. Ditto. Thanks for the review.
Ryosuke Niwa
Comment 4 2017-12-20 22:48:50 PST
Radar WebKit Bug Importer
Comment 5 2017-12-20 22:50:39 PST
Note You need to log in before you can comment on or make changes to this bug.